objects/Deployment_Job__c.object
<CustomObject>
    <fields>
        <fullName>Async_Job_ID__c</fullName>
        <label>Async Job ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployed__c</fullName>
        <label>% Deployed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Destination_Org__c</fullName>
        <label>Destination Org</label>
        <referenceTo>Destination_Org__c</referenceTo>
        <relationshipLabel>Deployment Jobs</relationshipLabel>
        <relationshipName>Deployment_Jobs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Early_Completion_Status__c</fullName>
        <label>Early Completion Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Status__c</fullName>
        <label>External Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Latest result with more details of the job execution.</inlineHelpText>
        <label>Last Result</label>
        <referenceTo>Result__c</referenceTo>
        <relationshipLabel>Deployment Jobs</relationshipLabel>
        <relationshipName>Deployment_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Flag__c</fullName>
        <formula>IMAGE(
				
  CASE(Status__c,  
  &quot;Success&quot;, &quot;/img/samples/flag_green.gif&quot;,
  &quot;Failed&quot;, &quot;/img/samples/flag_red.gif&quot;,
  &quot;In progress&quot;, &quot;/img/loading.gif&quot;,
  &quot;/s.gif&quot;), 
   &quot;&quot; )+&quot; &quot;+   
			IMAGE(
							CASE(External_Status__c,
			         &quot;Queued&quot;, &quot;/img/loading.gif&quot;,
            &quot;Success&quot;,&quot;/img/samples/flag_green.gif&quot;,
            &quot;Timed out&quot;, &quot;/img/samples/flag_red.gif&quot;,
            &quot;Failed&quot;,&quot;/img/samples/flag_red.gif&quot;,
												&quot;/s.gif&quot;
							), &quot;&quot;
			)</formula>
        <label>Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <label>Step</label>
        <referenceTo>Step__c</referenceTo>
        <relationshipLabel>Deployment Jobs</relationshipLabel>
        <relationshipName>Deployment_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>To_Org_Name__c</fullName>
        <formula>Destination_Org__r.To_Org__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Org Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_ID__c</fullName>
        <inlineHelpText>To be used for Quick deployments. Available since metadata api v33 (Spring 15)</inlineHelpText>
        <label>Validation ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Deployment Job</label>
    <nameField>
        <displayFormat>DJ-{00000}</displayFormat>
        <label>Deployment Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>